package rpgEscapeCastel.weapon.weapons;

import rpgEscapeCastel.weapon.Weapon;

public final class Gun extends Weapon {

    public Gun() {
        super(4, "Gun", 100, 500, "guns.txt");
    }

    
}
