package rpgEscapeCastel.weapon.weapons;

import rpgEscapeCastel.weapon.Weapon;

public final class Shield extends Weapon {

    public Shield() {
        super(7, "Shield", 600, 100, "shields.txt");
    }

    
}
