@startuml
skinparam classAttributeIconSize 0
skinparam classFontStyle bold

package rpgEscapeCastele {

    class App {
        + main: void
    }

    package ascii {
        class PrintAscii {
            - BASE : String
            + printAsciiart: void
            + loadAsciiart: String
        }
    }

    package player {

        enum Team {
            CENTAUR
            DEVIL
            DRAGON
            FAIRY
            GHOST
            GRIM_REAPER
            GRYPHON
            MERMAID
            MONSTER
            SKELETON
            UNICORN

            - id : int
            - teamName : String
            - teamPower : int
            - teamLife : int
            - teamMoney : int
            - fileName : String

            + getId() : int
            + getTeamName() : String
            + getTeamPower() : int
            + getTeamLife() : int
            + getTeamMoney() : int
            + setTeamMoney() : void
            + getFileName() : String
            + printTeams() : void
            + fromId() : Team
            + random() : Team
        }

        class Inventory {
            - capacity : int
            - weapons : List
            + addWeapon(): boolean
            + removeWeapon() : boolean
            + viewWeapons() : List
            + size() : int
            + isFull() : boolean
            + getCapacity() : int
            + hasWeapon() : boolean
        }

        class Player implements IDestructible, Iplace {
            - id : int
            - name : String
            - team : Team
            + getName() : String
            + setName() : void
            + getTeam() : Team
            + getInventory() : Inventory
            + printAvatar() : void
            + printInventory() : void
            + symbolPlace() : String
            + getFileName() : String

        }
    }


    package weapon {

        abstract class Weapon {
            - id : int
            - name : String
            - price : int
            - damage : int
            - fileName : String
            ..operations..
            + getId() : int
            + getName() : String
            + getPrice() : int
            + getDamage() : int
            + getFileName() : String
            + attack() : void
        }
   

            class Axe extends Weapon
            class Bow extends Weapon
            class Explosive extends Weapon
            class Gun extends Weapon
            class Knife extends Weapon
            class Mace extends Weapon
            class Shield extends Weapon
            class Sword extends Weapon
        

        class WeaponStore {
            - stockWeapons : List
            + openStock() : void
            + buyWeapon() : boolean
            + removeWeapon() : void
            + sellWeapon() : void
        }


    }

    package gameMap {

        class GameMap {
            - SIZE : int
            - grid : IPlace[][]
            - player : player.Player
            - playerRow : int
            - playerCol : int
            --
            - fisrtMaph(): void
            - printMap() : void
            + fight(): boolean
            + playerMovement() : void
        }

        interface IDestructible {
            + isDestroyed() : boolean
            + getFileName() : String
            + takeDamage() : void
            + getLife() : int
            + getPower() : int
        }

        interface Iplace {
            + symbolPlace() : String
            + isFreePlace() : boolean
            + getFileName() : String
            + asIDestructible() : IDestructible
        }

        class Monster implements IDestructible, Iplace {
            - name : String
            - life : int
            - defense : int
            - fileName : String
            + toString() : String
            + getName() : String
            + isDestroyed() : boolean
            + getFileName() : String
            + takeDamage() : void
            + fromTeam() : Monster
            + symbolPlace() : String
            + getLife() : int
            + getPower() : int
        }

        class Obstacle implements IDestructible, Iplace {
            - obstacleType : String
            - life : int
            - defense : int
            - fileName : String
            + toString() : String
            + isDestroyed() : boolean
            + getFileName() : String
            + takeDamage() : void
            + symbolPlace() : String
            + getLife() : int
            + getPower() : int
        }

        class ExitCastele implements IDestructible, Iplace {
            - name : String
            - life : int
            - defense : int
            - fileName : String
            + isDestroyed() : boolean
            + getFileName() : String
            + win() : void
            + symbolPlace() : String
            + youDied() : void
            + winFight() : void
            + gameOver() : void
        }
        class EmptyCell implements Iplace {
            + symbolPlace() : String
            + isFreePlace() : boolean
            + getFileName() : String
            + asDestructible() : IDestructible
        }


    }
    App ..> ascii.PrintAscii : uses
    Player ..> ascii.PrintAscii : uses
    Player ..> WeaponStore : uses
    App ..> Player : uses
    App ..> Team : uses
    Weapon ..> PrintAscii : uses
    Player "1..1" -- "1..1" Weapon : has
    Player "1..1" -- "1..1" Inventory: has
    Player "1..1" --> "n..1" Team : chosen
    Monster "1..1" -- "N..1" Team : is
    WeaponStore "1..0" -- "1..1" Weapon : has
    GameMap "1..1" -- "1..1" Player : has
    GameMap "1..n" -- "1..n" Obstacle : has
    GameMap "1..n" -- "1..n" Monster : has
    GameMap "1..1" -- "1..1" ExitCastele : has
    GameMap "1..n" -- "1..n" EmptyCell : has
}

@enduml
